<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bip.androidbipwebviewexample.UserInfoActivity">

    <TextView
        android:id="@+id/info_header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/header_info"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bip_id_label"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/bip_id_info"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/info_header_text" />

    <TextView
        android:id="@+id/email_label"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/email_info"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bip_id_label" />

    <TextView
        android:id="@+id/email_verified_label"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/email_verified_info"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_label" />

    <TextView
        android:id="@+id/name_label"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/name_info"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_verified_label" />

    <TextView
        android:id="@+id/bip_id_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="TextView"
        app:layout_constraintLeft_toRightOf="@+id/bip_id_label"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/info_header_text" />

    <TextView
        android:id="@+id/email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="TextView"
        app:layout_constraintLeft_toRightOf="@+id/email_label"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/bip_id_text" />

    <TextView
        android:id="@+id/email_verified_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="TextView"
        app:layout_constraintLeft_toRightOf="@+id/email_verified_label"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/email_text" />

    <TextView
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="TextView"
        app:layout_constraintLeft_toRightOf="@+id/name_label"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/email_verified_text" />

    <Button
        android:id="@+id/button_info_return"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:onClick="returnToMain"
        android:text="@string/button_return_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
